<resources>
    <string name="app_name">ExtClipboardManager</string>
    <string name="action_settings">Settings</string>
    <string name="main_fragment_label">ExtClipboardManager</string>
    <string name="tile_control_service_label">ExtClipboardManager</string>
    <string name="enabled">Enable</string>
    <string name="disabled">Disable</string>
    <string name="current_service_status">Service status: %s</string>
    <string name="available">Available</string>
    <string name="unavailable">Unavailable</string>
    <string name="management_switch_title">Clipboard Management</string>
    <string name="source_code">Source Code</string>
    <string name="source_code_summary">View source code on Github</string>\
    <string name="about_title">About</string>
    <string name="management_title">Management</string>
    <string name="feedback_title">Feedback</string>
    <string name="feedback_desc">Post a feedback issue on Github</string>
    <string name="auto_clear_title">Auto Clear</string>
    <string name="auto_clear_management">Auto Clear Management</string>
    <string name="auto_clear_strategy">Auto Clear Strategy</string>
    <string name="auto_clear_summary">Automatically clear your clipboard when reaching some conditions</string>
    <string name="filter_app_read_title">Filter App Read</string>
    <string name="filter_app_write_title">Filter App Write</string>
    <string name="filter_app_read_summary">Filtering apps for reading from your clipboard in the background</string>
    <string name="filter_app_write_summary">Filtering apps for writing to your clipboard</string>
    <string name="category_filter_summary">Filter Management</string>
    <string name="read_strategy_title">Read Strategy</string>
    <string name="write_strategy_title">Write Strategy</string>
    <string name="read_strategy_summary">Read strategy management</string>
    <string name="write_strategy_summary">Write strategy management</string>
    <string name="share_project">Share</string>
    <string name="show_system_packages">Show System Packages</string>
    <string name="filter">Filter</string>
    <string name="auto_clear_timeout_title">Timeout Clear</string>
    <string name="auto_clear_timeout_summary">Automatically clear clipboard after %s seconds</string>
    <string name="auto_clear_timeout_summary_off">Automatically clear clipboard when time is out</string>
    <string name="confirm_text">OK</string>
    <string name="cancel_text">Cancel</string>
    <string name="timeout_input_title">Input Timeout</string>
    <string name="timeout_input_hint">Input timeout in seconds</string>
    <string name="auto_clear_read_count_title">Read Count</string>
    <string name="auto_clear_read_count_hint">Enter a count number</string>
    <string name="auto_clear_read_count_summary">When read count of clipboard reaches %s times, clipboard data will be automatically cleared</string>
    <string name="auto_clear_exclude_title">Content Exclusion</string>
    <string name="auto_clear_exclude_summary">Automatically clear will not take effect when clipboard data matches these pattern</string>
    <string name="auto_clear_whitelist">Whitelist</string>
    <string name="auto_clear_whitelist_desc">When apps in whitelist read the clipboard, read count will not reduce</string>
    <string name="auto_clear_blacklist_desc">Only apps in blacklist will reduce the reduce count when they read the clipboard</string>
    <string name="auto_clear_blacklist">Blacklist</string>
    <string name="auto_clear_work_mode">Work Mode</string>

    <string-array name="work_mode_entry_values">
        <item>Whitelist</item>
        <item>Blacklist</item>
    </string-array>

    <string name="add">Add</string>
    <string name="delete_all">Delete All</string>
    <string name="exclusion_content_hint">Support plain text/regex </string>
    <string name="exclusion_content_title">Input Content</string>
    <string name="exclusion_list_label">Exclusion List</string>
    <string name="filter_apps">Filter Apps</string>
    <string name="strategy_title">Strategy</string>
    <string name="clipboard_sync">Synchronous Clipboard</string>
    <string name="sync_manage">Synchronous Management</string>
    <string name="sync_manage_summary">Synchronize the clipboard data to the server</string>
    <string name="sync_manage_title">Server Configuration</string>
    <string name="enable_connect_ws_server">enable clipboard sync</string>
    <string name="enable_pull_only">only pull</string>
    <string name="wsServerUrlErrorTips">ws(s)://xxx/xx</string>
    <string name="IVLengthErrorTips">(IV) length is 16</string>
    <string name="KeyLengthErrorTips">(Key)length is 16/24/32</string>
    <string name="connection_status_runing">server connected</string>
    <string name="connection_status_stop">server disconnect</string>
    <string name="enable_message_encryption_tip">开启后，剪切板内容将加密发送给服务器，其他客户端需要配置key和iv与当前配置一致方可解密</string>
    <string name="enable_message_encryption">Encrypted transmission of the clipboard</string>
    <string name="sync_ws_server_summary">ws(s)://localhost:8080/chat</string>
    <string name="sync_auth_token_summary">服务器访问令牌(AuthToken)</string>
    <string name="sync_auth_token_title">服务器访问口令</string>
    <string name="sync_ws_server_title">服务器访问地址</string>
    <string name="sync_encryption_key_title">数据传输加密密钥</string>
    <string name="sync_encryption_iv_title">数据传输加密初始向量</string>
    <string name="sync_encryption_iv_summary">(IV)加密传输需要需要用到，所有客户端必须保持一致</string>
    <string name="sync_encryption_key_summary">(key)加密传输用到，所有客户端必须保持一致，16/24/32位数字+字母</string>
</resources>